@@ -16,8 +16,6 @@ import java.util.logging.Level;
 public class App {
     private static final Logger logger = Logger.getLogger(App.class.getName());
 
-
-
     public static void main(String[] args) {
         
         Scanner scanner = new Scanner(System.in, "UTF_8");
@@ -56,15 +54,14 @@ public class App {
             // ❌ 脆弱なポイント：ユーザー入力をそのままシェルコマンドに渡している
             //ProcessBuilder pb = new ProcessBuilder("/usr/bin/ping", "-c", "3", targetDomain);
             //Process process = pb.start();
-
+            //String command = "ping -c 3 " + args[0];
             //Process process = Runtime.getRuntime().exec(command);
             if (args.length == 0) return;
-            //String safeCommand = args[0].replaceAll("[\r\n]", "");
-            String command = "ping -c 3 " + args[0];
-
-            Process process = Runtime.getRuntime().exec(command.replaceAll("[\r\n]", "").replaceAll("([&|;><`!\\\\'\"\\{\\}\\[\\]\\(\\)\\^~])", "\\\\$1"));
-            //ProcessBuilder pb = new ProcessBuilder("/usr/bin/ping", "-c", "3", safeCommand.replaceAll("([&|;><`!\\\\'\"\\{\\}\\[\\]\\(\\)\\^~])", "\\\\$1"));
-            //Process process = pb.start();
+            String safeCommand = args[0].replaceAll("[\r\n]", "");
+            String sanicommand = testfunc(safeCommand);
+            //Process process = Runtime.getRuntime().exec(command.replaceAll("[\r\n]", "").replaceAll("([&|;><`!\\\\'\"\\{\\}\\[\\]\\(\\)\\^~])", "\\\\$1"));
+            ProcessBuilder pb = new ProcessBuilder("/usr/bin/ping", "-c", "3", sanicommand);
+            Process process = pb.start();
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream(), "UTF_8"));
             String line;
@@ -75,5 +72,9 @@ public class App {
         } catch (IOException e) {
             logger.log(Level.SEVERE, "コマンドの実行に失敗しました。管理者に連絡してください。");
         }
+    }
+    public static String testfunc(String instring){
+        
+        return instring.replaceAll("([&|;><`!\\\\'\"\\{\\}\\[\\]\\(\\)\\^~])", "\\\\$1");
     }
 }
